--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
+/* Global Styles */
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap");
+
 html {
   box-sizing: border-box;
 }
@@ -10,10 +12,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: Spartan, sans-serif;
+  font-family: "League Spartan", sans-serif;
   font-size: 12px;
 }
 
+/* Player Container */
 .player-container {
   height: 500px;
   width: 400px;
@@ -22,10 +25,10 @@ body {
   box-shadow: 0 15px 30px 5px rgba(0, 0, 0, 0.2);
 }
 
+/* Image Container */
 .img-container {
   height: 300px;
   width: 300px;
-
   position: relative;
   top: -50px;
   left: 50px;
@@ -39,6 +42,7 @@ body {
   box-shadow: 0 5px 30px 5px rgba(0, 0, 0, 0.2);
 }
 
+/* Headings */
 h2 {
   font-size: 25px;
   text-align: center;
